--- a/MeshModel.csproj
+++ b/MeshModel.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>Zeiss.IMT.PiWeb.Meshmodels</RootNamespace>
     <AssemblyName>MeshModel</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <AssemblyOriginatorKeyFile>..\snkey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>MeshModel.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <FileAlignment>512</FileAlignment>
     <WarningLevel>4</WarningLevel>
@@ -22,7 +22,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\Debug\Compile\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -35,7 +35,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\Release\Compile\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -86,6 +86,9 @@
       <DependentUpon>WellKnownDataTypes.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MeshModel.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
