added missing xml comments to meshmodel assembly, moved a missing file to the correct namespace, added nuget package definition

--- a/src/MeshModel.csproj
+++ b/src/MeshModel.csproj
@@ -40,6 +40,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\..\PiWeb.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Release\MeshModel.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
