fix: colorscale interpolates with alpha value. also added a precision parameter

--- a/src/MeshModel.csproj
+++ b/src/MeshModel.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ColorScaleEntry.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="ColorScaleInterpolation.cs" />
+    <Compile Include="ColorSpan.cs" />
     <Compile Include="IGuidGenerator.cs" />
     <Compile Include="MeshModelFormatData.cs" />
     <Compile Include="MeshModelType.cs" />
