--- a/src/Tests/MeshModel.Tests.csproj
+++ b/src/Tests/MeshModel.Tests.csproj
@@ -4,12 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
         <LangVersion>9.0</LangVersion>
         <AssemblyName>PiWeb.MeshModel.Tests</AssemblyName>
-        <AssemblyVersion>2.0.0.0</AssemblyVersion>
         <RootNamespace>Zeiss.PiWeb.MeshModel.Tests</RootNamespace>
         <Copyright>Copyright © 2020 Carl Zeiss Industrielle Messtechnik GmbH</Copyright>
         <Company>Carl Zeiss Industrielle Messtechnik GmbH</Company>
         <Authors>$(Company)</Authors>
         <IsPackable>false</IsPackable>
+        <Version>2.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
