--- a/src/MeshModel/MeshModel.csproj
+++ b/src/MeshModel/MeshModel.csproj
@@ -18,6 +18,10 @@
         </Description>
         <PackageId>Zeiss.PiWeb.MeshModel</PackageId>
         <Version>2.0.0</Version>
+        <PackageIcon>../../gfx/logo_128x128.png</PackageIcon>
+        <PackageLicenseFile>../../LICENSE</PackageLicenseFile>
+        <PackageProjectUrl>https://github.com/ZEISS-PiWeb/PiWeb-MeshModel</PackageProjectUrl>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
     <ItemGroup>
