--- a/src/MeshModel/MeshModel.csproj
+++ b/src/MeshModel/MeshModel.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>8.0</LangVersion>
-        <AssemblyName>PiWeb.MeshModel</AssemblyName>
+        <AssemblyName>Zeiss.PiWeb.MeshModel</AssemblyName>
         <RootNamespace>Zeiss.PiWeb.MeshModel</RootNamespace>
         <Copyright>Copyright © 2020 Carl Zeiss Industrielle Messtechnik GmbH</Copyright>
         <Company>Carl Zeiss Industrielle Messtechnik GmbH</Company>
