--- a/.github/workflows/software-composition-analysis.yml
+++ b/.github/workflows/software-composition-analysis.yml
@@ -15,4 +15,4 @@ jobs:
         uses: oss-review-toolkit/ort-ci-github-action@7f23c1f8d169dad430e41df223d3b8409c7a156e
         with:
           allow-dynamic-versions: 'true'
-          ort-cli-analyze-args: '-P ort.analyzer.enabledPackageManagers=Nuget'
+          ort-cli-args: '-P ort.analyzer.enabledPackageManagers=Nuget'
