--- a/.github/workflows/software-composition-analysis.yml
+++ b/.github/workflows/software-composition-analysis.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           repository: 'ZEISS-PiWeb/PiWeb-MeshModel'
       - name: Run GitHub Action for ORT
-        uses: oss-review-toolkit/ort-ci-github-action@7f23c1f8d169dad430e41df223d3b8409c7a156e
+        uses: oss-review-toolkit/ort-ci-github-action@v1
         with:
           allow-dynamic-versions: 'true'
           ort-cli-args: '-P ort.analyzer.enabledPackageManagers=Nuget'
