--- a/src/MeshModel/MeshModel.csproj
+++ b/src/MeshModel/MeshModel.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Buffers" Version="4.5.1"/>
+    <PackageReference Include="Zeiss.PiWeb.ColorScale" Version="1.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
